                    Changes made to Pyjamas since 0.5p1
                    -----------------------------------

 * Added "pow", "hex", "oct", "round", "divmod", "all", "any" and "delattr".
   (thanks to Kees).

 * Added subscript support and more, from the llpamies branch (lkcl), to
   get pygtk working.

 * Added support for x ** y syntax (thanks to Kees).

 * Fixed getBoundingClientRect off-by-one bug (firefox 3 returns an
   inaccurate float, not an int)  thanks to khiraly

 * Added ToggleButton, PushButton and CustomButton (thanks to khiraly)

 * Added means to return and call functions from another function call
   (added by Kees)

 * Added means to derive classes from classes in other modules
   e.g. from module import parent; class child(parent): pass
   (thanks to Kees Bos).

 * Added class "Zero args" support (thanks to Kees Bos).
   TODO: support runtime exceptions when number of function
   call arguments is wrong, as illustrated in the new LibTest.

 * Added Multiple Inheritance (thanks to Kees Bos)

 * Add support for Google Gears (Database)

 * Completed DisclosurePanel port 


                    Changes made to Pyjamas since 0.5
                    ---------------------------------

 * Fixed Autocompletion which just needed non-modal on PopupPanel
   (thanks to lovelysystems for implementing non-modal dialogs
    otherwise it wouldn't be possible to fix Autocompletion)

 * Added implementation of metaclass "type" function

 * Made KeyboardListener a singleton module rather than have a class
   named the same as the module.  Likewise with MouseListener, Event
   and Focus.

 * Added Right-clickable Context Menus, and added an example in KitchenSink
   Menus.py to show how to set them up.

 * Added python-spidermonkey as an experimental platform, exactly like
   pyv8run.py now there is pysmrun.py

 * Top-level global variables, and top-level functions, now
   correctly scope in a module (thanks to Jose for raising this one)
